--- a/manage_backup_schedule_update.yaml
+++ b/manage_backup_schedule_update.yaml
@@ -110,7 +110,7 @@
         extra_data:
           volume_id: "{{ volume_id }}"
           tenant_name: "{{ tenant_name }}"
-          backup_name: "{{ frequency }}_backup"
+          backup_name: "{{ frequency }}_{{ backup_name }}"
           retention_days: "{{ retention_days }}"
         state: present
         controller_host: "{{ awx_host }}"
